--- a/Desktop/TP7_NFA040_MB/index.html
+++ b/Desktop/TP7_NFA040_MB/index.html
@@ -3,20 +3,18 @@
 
 <head>
   <meta charset="utf-8">
-  <link href="styles/style.css" rel="stylesheet" type="text/css">
+  <link href="style.css" rel="stylesheet" type="text/css">
   <title>Ma page test</title>
 </head>
 
 <body>
   <h1>Exemple simple de boîte flottante</h1>
-  <div class="box">Boîte flottante</div>
-  <p>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-    Nulla luctus aliquam dolor, eu lacinia lorem placerat vulputate.
-    Duis felis orci, pulvinar id metus ut, rutrum luctus orci.
-    Cras porttitor imperdiet nunc, at ultricies tellus laoreet sit amet.
-  </p>
-  <p>
+  <div class="wrapper">
+    <div class="box">Boîte flottante</div>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla luctus
+      aliquam dolor, eu lacinia lorem placerat vulputate.</p>
+  </div>
+  <p class="cleared">
     Sed auctor cursus massa at porta. Integer ligula ipsum,
     tristique sit amet orci vel, viverra egestas ligula. Curabitur vehicula tellus neque, ac ornare ex malesuada et. In
     vitae convallis lacus. Aliquam erat volutpat. Suspendisse ac imperdiet turpis. Aenean finibus sollicitudin eros
